# insurance-claim-agent

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5411ae275660_initial_schema.py  dd4271981623_add_users_and_access_checks_for_file_.py
app/: database.py  main.py
app/dependencies/: agent_dependencies.py  file_dependencies.py  user_dependencies.py
app/lib/: access_checker.py  claim_loop.py  documents_chunker.py  jwt.py  retriever.py  workflow.py
app/lib/graph/: nodes.py  tools.py  workflow.py
app/lib/tools/: retrieval.py
app/models/: __init__.py  agent.py  file.py  user.py  user_agent_access.py  user_file_access.py
app/repositories/: agent_repository.py  file_repository.py
app/routers/: agent.py  auth.py  chatbot.py
app/services/: agent_service.py  file_service.py  policy_checker.py
lib/: answer_producer.py  claim_loop.py  document_loader.py  query_responder.py  workflow.py
test/: insurance_claim.txt  rule_policy.txt
