[project]
name = "insurance-claim-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.139.0",
    "ipython>=9.15.0",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.3.4",
    "langchain-text-splitters>=1.1.2",
    "langchain-tools>=0.1.34",
    "langgraph>=1.2.8",
    "psycopg>=3.3.4",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
